# djangospice

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/djangospice/apps/: __init__.py  admin.py  apps.py  bootstrap.py  config.py  context_processors.py  discovery.py  helpers.py  installer.py  loader.py  models.py  registry.py  services.py  utils.py
src/djangospice/cli/: __init__.py  helpers.py  plugin.py  prompts.py  system.py  validate.py
src/djangospice/container/: __init__.py  contracts.py  exceptions.py  lifelines.py  registry.py
src/djangospice/core/: conversion.py  exceptions.py  formatting.py  generation.py  logging.py  mail.py  payload.py  references.py  serializable.py  serializer.py  validation.py
src/djangospice/database/: managers.py  mixins.py  models.py  utils.py
src/djangospice/enums/: __init__.py  contacts.py  datatypes.py  datetime.py  people.py  runtime.py
src/djangospice/events/: __init__.py  apps.py  base.py  celery.py  decorators.py  dispatcher.py  listener.py  registry.py  subscriber.py  tasks.py
src/djangospice/excel/: engine.py  inspection.py  reference.py  style.py  utils.py
src/djangospice/files/: helpers.py  path.py  storage.py  writer.py
src/djangospice/filters/: base.py  helpers.py
src/djangospice/forms/: fields.py  import.py  mixins.py
src/djangospice/html/: attributes.py  component.py  fragments.py
src/djangospice/jobs/: __init__.py  apps.py  base.py  broadcast.py  celery.py  consumers.py  dispatcher.py  enums.py  events.py  handle.py  listeners.py  reporter.py  result.py  routing.py  tasks.py  worker.py
src/djangospice/middleware/: gzip.py
src/djangospice/notification/: alert.py  apps.py  base.py  broadcast.py  builder.py  celery.py  conf.py  dataclass.py  enums.py  events.py  listeners.py  middleware.py  notifiable.py  notifier.py  registry.py  serializers.py  tasks.py
src/djangospice/pdf/: __init__.py  mixin.py  renderer.py
src/djangospice/realtime/: __init__.py  broadcast.py  channels.py  consumers.py  groups.py  scopes.py  serializers.py  shortcuts.py
src/djangospice/resources/: __init__.py  base.py  config.py  widgets.py
src/djangospice/response/: conf.py  defaults.py  document.py  event.py  exceptions.py  headers.py  location.py  middleware.py  registry.py  response.py  shortcuts.py
src/djangospice/rest/: apps.py  discovery.py  metadata.py  permissions.py  registry.py  router.py  serializers.py  urls.py  viewsets.py
src/djangospice/tables/: builder.py  columns.py  exporter.py  job.py  links.py  mixins.py
(+148 files in other folders)
